@@ -1,3 +1,7 @@
+2008-08-25  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed issue #9196: In htmlArea RTE, unable to create an external URL containing german umlauts
+
 2008-08-21  Dmitry Dulepov  <dmitry@typo3.org>
 
     * Fixed bug #8826: calls to ini_set produces warnings
